--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -188,3 +188,41 @@ body {
     @include button(darkred, magenta, white);
   }
 }
+
+.open-chat {
+  cursor: pointer;
+}
+
+.chat-dialog {
+  position: absolute;
+  left: -300%;
+  top: 50%;
+  .messages-area {
+    background-color: #95afc0;
+    padding: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .message {
+      font-size: 0.75rem;
+      border: solid 1px black;
+      border-radius: 2rem;
+      padding: 20%;
+      margin-bottom: 10%;
+      width: 100%;
+      .sender {
+        font-weight: 600;
+      }
+    }
+  }
+}
+
+.unseen-messages-counter {
+  background-color: #eb4d4b;
+  color: #ecf0f1;
+  border-radius: 100%;
+  position: absolute;
+  padding: 20%;
+  left: 0;
+  top: 100%;
+}
