--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,15 @@ body {
   font-family: "Roboto Serif", sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  width: 2px;
+  background: #f1f1f1;
+}
+
 #root {
   width: 100%;
   height: 100%;
@@ -309,6 +318,7 @@ body {
 }
 
 .scores-history {
+  border-radius: 2%;
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -328,7 +338,7 @@ body {
   overflow-y: scroll;
 }
 
-.scores-history h1 {
+.scores-history h2 {
   color: #535c68;
 }
 
@@ -484,6 +494,14 @@ body {
 
 .custom-alert button:hover {
   background-color: "violet";
+}
+
+.customizee-screen {
+  background-color: #1289a7;
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2%;
 }
 
 .customizee-screen h1 {
