--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,15 @@ body {
   font-family: "Roboto Serif", sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  width: 2px;
+  background: #f1f1f1;
+}
+
 #root {
   width: 100%;
   height: 100%;
@@ -164,6 +173,7 @@ body {
   }
 }
 .scores-history {
+  border-radius: 2%;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -175,7 +185,7 @@ body {
   width: 20vw;
   max-height: 50vh;
   overflow-y: scroll;
-  h1 {
+  h2 {
     color: #535c68;
   }
 }
@@ -278,6 +288,11 @@ body {
 }
 
 .customizee-screen {
+  background-color: #1289a7;
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2%;
   h1 {
     text-align: center;
   }
