--- a/src/css/main.css
+++ b/src/css/main.css
@@ -591,4 +591,23 @@ body {
   text-align: center;
   font-size: larger;
 }
+
+dialog button {
+  background-color: black;
+  color: white;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  border-radius: 2%;
+  border: none;
+  outline: none;
+  padding: 5% 15%;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+dialog button:hover {
+  background-color: black;
+}
 /*# sourceMappingURL=main.css.map */
